feat: add Tours app

--- a/imcta/templates/header.html
+++ b/imcta/templates/header.html
@@ -10,7 +10,7 @@
 <nav id="navbar" class="navbar order-last order-lg-0">
 <ul>
   <li><a href="{% url 'frontpage:front' %}">{% translate "About us" %}</a></li>
-  <li><a href="#">{% translate "Tours" %}</a></li>
+  <li><a href="{% url 'tours:list' %}">{% translate "Tours" %}</a></li>
   <li><a href="#">{% translate "Payment" %}</a></li>
   <li><a href="#">{% translate "Contacts" %}</a></li>
 
