--- a/imcta/templates/header.html
+++ b/imcta/templates/header.html
@@ -1,5 +1,4 @@
 {% load i18n %}
-{% get_available_languages as languages %}
 <header id="header" class="fixed-top">
 <div class="container d-flex align-items-center">
 
@@ -13,22 +12,24 @@
   <li><a href="{% url 'tours:list' %}">{% translate "Tours" %}</a></li>
   <li><a href="#">{% translate "Payment" %}</a></li>
   <li><a href="#">{% translate "Contacts" %}</a></li>
-
- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle fw-bold" href="#" id="languageSelector" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				  {{ LANGUAGE_CODE|upper }}
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-           {% for lang_code, lang_name in languages %}
-            {% language lang_code %}
-			<li><a class="dropdown-item" href="{% url 'frontpage:front' %}" alt="{{ lang_name }}" title="{{ lang_name }}">{{ lang_name }}</a></li>
-            {% endlanguage %}
-        {% endfor %}
-          </ul>
-        </li>
+</li>
 </ul>
 <i class="bi bi-list mobile-nav-toggle"></i>
 </nav>
-
+<div class="mx-3">
+<form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+    <input name="next" type="hidden" value="{{ redirect_to }}">
+    <select class="form-select" name="language" onchange="this.form.submit()" >
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {% for language in languages %}
+            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                {{ language.name_local|upper }}
+            </option>
+        {% endfor %}
+    </select>
+</form>
+</div>
 </div>
 </header>
