style: add flag icons to language selector

--- a/imcta/templates/header.html
+++ b/imcta/templates/header.html
@@ -21,9 +21,9 @@
 		  &#127760;
   </button>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <li><a class="dropdown-item" href="{% change_lang 'ru' %}">RU</a></li>
-    <li><a class="dropdown-item" href="{% change_lang 'en' %}">EN</a></li>
-    <li><a class="dropdown-item" href="{% change_lang 'zh-hans' %}">CN</a></li>
+    <li><a class="dropdown-item" href="{% change_lang 'ru' %}">&#127479;&#127482; RU</a></li>
+    <li><a class="dropdown-item" href="{% change_lang 'en' %}">&#127468;&#127463; EN</a></li>
+    <li><a class="dropdown-item" href="{% change_lang 'zh-hans' %}">&#127464;&#127475; CN</a></li>
   </ul>
 </div>
 </div>
